gcc/testsuite/algol68/compile/error-stropping-keyword-1.a68
begin for i to 10 skip od { dg-error "do" }
end
